# ml_midterm2024

./: Dockerfile  README.md  pyproject.toml
midterm_project/: notebook.ipynb  predict.py  train.py  xgboost_model_with_preprocessor.pkl
